--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <h3 id = "wrongLetters"> none yet</h3>
         <h3 id = "You-win"> YOU WIN!</h3>
+        <img src = "assets/images/castle2.png" alt="castle">
             <script>
                     words = ["Harry Potter","Hermione Granger","Ron Weasley","Albus Dumbledore","Hogwarts", "Hogsmeade",
                             "Diagon Alley", "Slytherin", "Hufflepuff", "Ravenclaw", "Gryffindor", "Leaky Cauldron", "Godric's Hollow",
@@ -132,6 +133,7 @@
                             guessLetter(btn);
                         }
                     }
-                </script>
+            </script>
+        
     </body>
 </html>
