Changed game name

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!Doctype html>
 <html>
     <head>
-        <title>Harry Potter Guess Game!</title>
+        <title>Harry Potter Hangman!</title>
         <link rel = "stylesheet" href = "assets/wordGame.css">
     </head>
     <body onkeyup = "btnPress()">
-        <h1>Harry Potter Guessing Game!</h1>
+        <h1>Harry Potter Hangman!</h1>
         <h2 id = "wins">Wins: </h2>
         <h2 id = "losses">Losses: </h2>
         <h2 id= "lives">Lives: </h2> 
